memory/session_audit.log
[MiniStudioGPT v1.4.4] 2025-11-01T09:08:20.742702 | Fichier introuvable : ./fastapi_app/test_apply_code_runtime.py
[MiniStudioGPT v1.4.4] 2025-11-01T09:35:19.486295 | Ajout automatique de la fonction manquante : hello_apply_test
[MiniStudioGPT v1.4.4] 2025-11-01T09:35:19.539535 | Code appliqué avec succès sur ./fastapi_app/test_apply_target.py (fonction hello_apply_test)
[MiniStudioGPT v1.4.4] 2025-11-01T09:37:23.794108 | Code appliqué avec succès sur ./fastapi_app/test_apply_target.py (fonction hello_apply_test)
[MiniStudioGPT v1.4.4] 2025-11-03T17:15:51.305640 | Ajout automatique de la fonction manquante : hello_world_v21
[MiniStudioGPT v1.4.4] 2025-11-03T17:15:51.350215 | Code appliqué avec succès sur ./fastapi_app/test_patch_target.py (fonction hello_world_v21)
[MiniStudioGPT v1.4.4] 2025-11-03T17:36:04.770511 | Ajout automatique de la fonction manquante : get_notes
[MiniStudioGPT v1.4.4] 2025-11-03T17:36:04.811385 | Code appliqué avec succès sur ./fastapi_app/main.py (fonction get_notes)
[MiniStudioGPT v1.4.4] 2025-11-04T20:30:35.818647 | Code appliqué avec succès sur ./fastapi_app/test_apply_target.py (fonction dummy)
[MiniStudioGPT v1.4.4] 2025-11-04T20:31:07.211883 | Ajout automatique de la fonction manquante : brand_new_feature
[MiniStudioGPT v1.4.4] 2025-11-04T20:31:07.317737 | Code appliqué avec succès sur ./fastapi_app/test_apply_target.py (fonction brand_new_feature)
[MiniStudioGPT v1.4.4] 2025-11-04T20:31:38.316565 | Ajout automatique de la fonction manquante : bad_func
[MiniStudioGPT v1.4.4] 2025-11-04T20:31:38.649713 | Erreur de syntaxe détectée :   File "./fastapi_app/test_apply_target.py", line 10
    def bad_func(:
                 ^
SyntaxError: invalid syntax

[MiniStudioGPT v1.4.4] 2025-11-04T20:32:09.100035 | Erreur interne : 500: Compilation error:   File "./fastapi_app/test_apply_target.py", line 10
    def bad_func(:
                 ^
SyntaxError: invalid syntax

